--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,5 +103,5 @@ message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 message(STATUS "C++ standard: ${CMAKE_CXX_STANDARD}")
 message(STATUS "OpenCV version: ${OpenCV_VERSION}")
 message(STATUS "Boost version: ${Boost_VERSION}")
-# message(STATUS "Build tests: ${BUILD_TESTS}")
+message(STATUS "Build tests: ${BUILD_TESTS}")
 message(STATUS "========================================")
